# passLair-core

./: LICENSE  README.md  pyproject.toml
.github/workflows/: CiCd.yml
src/passLair/: __init__.py
src/passlair/adapters/: local.py  remote.py  remotefirst.py
src/passlair/base/: base_repository.py
src/passlair/base/abstract/: authenticated_user.py  base_facade.py
src/passlair/core/: __init__.py  interface.py
src/passlair/core/auth/: user_manager.py
src/passlair/core/classes/: __init__.py  password_retriver.py  user_manager.py
src/passlair/core/database/: __init__.py  database_manager.py
src/passlair/core/interface/: auth.py  identity.py  password_manager.py
src/passlair/core/models/: __init__.py  base.py  standard_user.py  vault_entry.py
src/passlair/core/readers/: __init__.py  password_reader.py  user_reader.py
src/passlair/core/writers/: password_writer.py  user_writer.py
src/passlair/dataclasses/: base.py  facade_result.py  password_data.py  user_data.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/core/interface/: test_auth.py  test_identity.py
tests/unit/core/: conftest.py
tests/unit/core/auth/: test_user_manager.py
tests/unit/core/database/: test_database_manager.py
tests/unit/core/readers/: test_password_reader.py  test_user_reader.py
tests/unit/core/writers/: conftest.py  test_password_writer.py  test_user_writer.py
