[project]
name = "password-manager"
version = "0.1.0"
description = "Library to help you build your password manager"
readme = "README.md"
authors = [
    { name = "Adam Sarga", email = "vronst@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
